<resources>
    <string name="app_name">Super Call International</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_info">Info</string>
    <string name="title_recent">Recent</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_keypad">Keypad</string>
    <string name="title_setting">Setting</string>

    <string name="access_number">Access Number</string>
    <string name="access_number_value">08706384000</string>
    <string name="access_setting">Access setting</string>
    <string name="user_guide">User guide</string>
    <string name="tell_friend">Tell friends</string>
    <string name="contact_us">Contact us</string>
    <string name="customer_service">Customer services</string>
    <string name="version">Version %s</string>
    <string name="version_value">1.0</string>
    <string name="free_call">Free call</string>
    <string name="free_call_number">0203 397 1435</string>
    <string name="recent">RECENT</string>
    <string name="contacts">CONTACT</string>
    <string name="setting">SETTING</string>
    <string name="empty_number_error">Please enter a phone number.</string>

    <string name="read_contact_permission">Permission is required to get contact list.</string>
    <string name="call_permission">Permission is required to make a phone call.</string>

    <string name="info_title">Call abroad for free in 2 easy steps:</string>
    <string name="info_desc">Get a tariff or bolt on from your existing provider that gives free calls to 0870 numbers.
        Then simply call abroad.\n</string>
    <string name="info_bottom">Click here for more info and to see which countries we cover.</string>
    <string name="toolbar_header_content">FREE INTERNATIONAL CALLS FROM \n THE UK TO OVER 150 COUNTRIES</string>
    <string name="title_activity_splash">Splash</string>

    <string name="super_call_link">http://supercallinternational.com/</string>
    <string name="super_call_share_content">Free international calls from landlines or mobile. Go to..\n</string>
    <string name="super_call_email">info@supercallinternational.com</string>
    <string name="no_app_found_error">No app found to perform this action.</string>
    <string name="access_setting_on_off">(On/Off)</string>

</resources>
