<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.gauravsingh.myapplication.fragment.SettingFragment">

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:elevation="@dimen/_4sdp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorRed">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:gravity="center"
                />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>-->

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingTop="@dimen/_10sdp"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_number"
                    android:textColor="@color/colorBlackDim"
                    android:textStyle="bold"
                    android:textSize="@dimen/_16sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/access_number_value"
                    android:textColor="@color/colorBlackDim"
                    android:textStyle="bold"
                    android:textSize="@dimen/_16sdp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_setting"
                    android:textColor="@color/colorBlackDim"
                    android:drawableLeft="@drawable/ic_block"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_15sdp"/>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchAccessSetting"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    app:trackTint="@color/colorDimWhite"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_guide"
                    android:textColor="@color/colorBlackDim"
                    android:drawableLeft="@drawable/ic_help"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_15sdp"/>
                <ImageView
                    android:id="@+id/imgUserGuide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:srcCompat = "@drawable/ic_right_arrow"
                    android:padding="@dimen/_5sdp"
                    android:drawableTint="@color/colorRed"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/colorBlackDim"
                    android:textSize="@dimen/_15sdp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tell_friend"
                    android:textColor="@color/colorBlackDim"
                    android:drawableLeft="@drawable/ic_share"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_15sdp"/>
                <ImageView
                    android:id="@+id/imgTellFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:srcCompat = "@drawable/ic_right_arrow"
                    android:padding="@dimen/_5sdp"
                    android:clickable="true"
                    android:drawableTint="@color/colorRed"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:textColor="@color/colorBlackDim"
                    android:textSize="@dimen/_15sdp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:textColor="@color/colorBlackDim"
                    android:drawableLeft="@drawable/ic_contact_mail"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_15sdp"/>
                <ImageView
                    android:id="@+id/imgContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:srcCompat = "@drawable/ic_right_arrow"
                    android:padding="@dimen/_5sdp"
                    android:drawableTint="@color/colorRed"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:clickable="true"
                    android:textColor="@color/colorBlackDim"
                    android:textSize="@dimen/_15sdp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_service"
                    android:textColor="@color/colorBlackDim"
                    android:drawableLeft="@drawable/ic_room_service"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_15sdp"/>
                <TextView
                    android:id="@+id/txtFreeCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/free_call"
                    android:textAllCaps="true"
                    android:clickable="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/colorBlackDim"
                    android:textSize="@dimen/_15sdp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txtVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="@color/colorBlackDim"
                    android:drawableLeft="@drawable/ic_verified_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/_15sdp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
</layout>